<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:padding="10dp">
            <TextView
                android:text="@string/x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                />

            <TextView
                android:id="@+id/x_value"
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/x_pos"
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </TableRow>

        <TableRow
            android:padding="10dp">

            <TextView
                android:text="@string/y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                />

            <TextView
                android:id="@+id/y_value"
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/y_pos"
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </TableRow>

        <TableRow
            android:padding="10dp">

            <TextView
                android:text="@string/z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                />

            <TextView
                android:id="@+id/z_value"
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/z_pos"
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/start_and_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"/>

    <Button
        android:id="@+id/compass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compass"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:padding="10dp">

            <TextView
                android:text="@string/Coordinates_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                />

            <TextView
                android:id="@+id/coordinates"
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </TableRow>

        <TableRow
            android:padding="10dp">

            <TextView
                android:text="@string/CoordinatesNET_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                />

            <TextView
                android:id="@+id/coordinates_network"
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/take_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Take Photo"/>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextureView
            android:id="@+id/textureView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>



</LinearLayout>